# CASE

./: .gitignore  .harper-dictionary.txt  Cargo.toml  Justfile  flake.nix
.cargo/: config.toml
.github/workflows/: check.yml  test.yml
case-tui/: Cargo.toml  Justfile
case-tui/.config/: config.toml
case-tui/src/: config.rs  core.rs  lib.rs  main.rs  tui.rs
case-tui/src/helpers/: dirs.rs  logging.rs  mod.rs  term.rs
case-tui/src/widgets/: mod.rs
doc/: design.typ
iOS/: Justfile  project.yml
iOS/Case/: CaseApp.swift  ContentView.swift
shared/: Cargo.toml  Justfile
shared/crates/sakura/src/: lib.rs  node.rs
shared/src/: app.rs  error.rs  lib.rs  sse.rs
shared/src/types/: due_date_time.rs  group.rs  mod.rs  priority.rs  task.rs  tree.rs
tui/: Cargo.toml  Justfile
tui/src/: core.rs
