[package]
name = "case"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
color-eyre = "0.6.5"
crossbeam-channel = "0.5.15"
crossterm = { version = "0.29.0", features = ["serde", "event-stream"] }
derive_deref = "1.1.1"
directories = "6.0.0"
futures = "0.3"
lazy_static = "1.5.0"
ratatui = "0.30.0"
reqwest = { version = "0.13.1", features = ["stream"] }
serde.workspace = true
shared = { path = "../shared" }
signal-hook = "0.4.3"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
tokio-util = "0.7.18"
toml = "1.0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
pretty_assertions = "1.4.1"

[[bin]]
name = "case"
path = "./src/main.rs"


[lints.clippy]
pedantic = "deny"
nursery = "deny"
